# invoicegen-cli

./: .gitignore  08-cli-business-tool-screen-01.html  08-cli-business-tool-screen-01.prompt.md  08-cli-business-tool-screen-02.html  08-cli-business-tool-screen-02.prompt.md  08-cli-business-tool-screen-03.html  08-cli-business-tool-screen-03.prompt.md  08-cli-business-tool-stitch-screens.md  CONTRACT.md  PROJECT.md  README.md  pyproject.toml  requirements.txt
invoicegen/: __init__.py  __main__.py  cli.py  database.py  models.py  pdf_generator.py  reports.py  theme.py
tests/: conftest.py  test_cli.py  test_database.py  test_models.py  test_pdf.py
