[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoicegen"
version = "1.0.0"
description = "Professional CLI invoice generator with PDF export and revenue reporting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Matt"},
]
keywords = ["invoice", "cli", "pdf", "business", "automation", "billing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
invoicegen = "invoicegen.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/invoicegen"
Repository = "https://github.com/yourusername/invoicegen"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["invoicegen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
